// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip.js should not attach content and match snapshot 1`] = `
<span class="tooltip"><!--teleport start--><div style="z-index: 10; display: none;" data-popper-root=""><transition-stub><div id="tooltip-1" role="tooltip" tabindex="-1" class="popper__box tooltip__box" style="display: none;"><div class="tooltip__content"><span>Content</span></div>
<div class="popper__arrow" data-popper-arrow=""></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-describedby="tooltip-1" aria-controls="tooltip-1">Activator</button></span>
`;

exports[`Tooltip.js should render component and match snapshot 1`] = `<span class="tooltip"><!--teleport start--><!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-describedby="tooltip-1" aria-controls="tooltip-1">Activator</button></span>`;

exports[`Tooltip.js should render component and match snapshot 2`] = `
<div id="app">
  <div style="z-index: 10; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 2px);" data-popper-root="" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="top">
    <transition-stub>
      <div id="tooltip-1" role="tooltip" tabindex="-1" class="popper__box tooltip__box" style="">
        <div class="tooltip__content">Content Content Content</div>
        <div class="popper__arrow" data-popper-arrow="" style="position: absolute; left: 0px; transform: translate(8px, 0px);" data-hide=""></div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`Tooltip.js should render component with min/max width and match snapshot 1`] = `
<span class="tooltip"><!--teleport start--><div style="z-index: 10; display: none;" data-popper-root=""><transition-stub><div id="tooltip-1" role="tooltip" tabindex="-1" class="popper__box tooltip__box" style="max-width: 200px; min-width: 100px; display: none;"><div class="tooltip__content"><span>Content</span></div>
<div class="popper__arrow" data-popper-arrow=""></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-describedby="tooltip-1" aria-controls="tooltip-1">Activator</button></span>
`;

exports[`Tooltip.js should render component with zIndex prop and match snapshot 1`] = `
<span class="tooltip"><!--teleport start--><div style="z-index: 10; display: none;" data-popper-root=""><transition-stub><div id="tooltip-1" role="tooltip" tabindex="-1" class="popper__box tooltip__box" style="display: none;"><div class="tooltip__content"><span>Content</span></div>
<div class="popper__arrow" data-popper-arrow=""></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-describedby="tooltip-1" aria-controls="tooltip-1">Activator</button></span>
`;
